using UnityEngine;

public class FastBrick : BaseBrick
{
    // Start is called once before the first execution of Update after the MonoBehaviour is created
    void Awake()
    {
        gravityScale= 0.5f;
    }

    
}
